# DualTestBeam

./: .gitlab-ci.yml  CMakeLists.txt  README.md  Resolution.C
compact/: CrystalAna.C  DRBigEcal1.xml  DRBigEcal2.xml  DRConly.xml  DRDualSampHcal.xml  DRDualTestBeam.xml  DRFIDEAonly.xml  DRFSCEPLAonly.xml  DRFSCEPNQonly.xml  DRFSCEPSAonly.xml  DRFSCEPonly.xml  DRFiber_geo.cpp  DRFonly.xml  DRJunk.xml  DRJunk3.xml  DRJunkR.xml  DRJunkR2.xml  DRJunkR3.xml  DRJunkbigger.xml  DRSampOnly.xml  DRSampOnly2.xml  DRSingleCrystalCosmicRay.xml  DRjunk.xml  DualReadoutToy.C  IDEA_DRFiber.xml  IDEA_HCAL.xml  Overlay3.C  ProcessResvE.jdl  ProcessResvE.sh  ProcessResvE2.jdl  ProcessResvE2.sh  README.md  RI_refrac.py  Resolution.C  Resolution_twocals.C  ResvE.C  SCEAna.C  SCEPCALConstants.xml  SCEPCALConstants2.xml  SCEPCALConstants3.xml  (+74 more)
compact/Figures/: figE1E2vfFiber1.C  figE1E2vfFiber2.C  figE1E2vfSampL.C  figE1E2vfSampS.C  figESC.C  figEdgeRel.C  figNONCONS.C  figefff.C  figepifff.C  figepifffFiber1.C  figepifffFiber2.C  figepifffPbWOL.C  figepifffPbWOS.C  figepifffSampL.C  figepifffSampS.C  figescvf.C  figescvfFiber1.C  figescvfFiber2.C  figescvfPbWO.C  figescvfSampL.C  figescvfSampS.C  figescvnonconsFiber1.C  figescvnonconsFiber2.C  figescvnonconsPbWO.C  figescvnonconsSampL.C  figescvnonconsSampS.C  figg1g2Fiber1.C  figg1g2Fiber2.C  figg1g2SampL.C  figg1g2SampS.C  fignonconsvf.C  fignonconsvfFiber1.C  fignonconsvfFiber2.C  fignonconsvfPbWO.C  fignonconsvfSampL.C  fignonconsvfSampS.C  fignsncFiber1.C  fignsncFiber1timing.C  fignsncFiber2.C  fignsncSampL.C  (+19 more)
compact/jobs/: condor-executable-conly-20_e.jdl  condor-executable-conly-20_pi.jdl  condor-executable-ecalplusf-20_e.jdl  condor-executable-ecalplusf-20_pi.jdl  condor-executable-ecalplusf-20_pi.sh  condor-executable-fIDEAonly-20_e.jdl  condor-executable-fIDEAonly-20_e.sh  condor-executable-fIDEAonly-20_pi.jdl  condor-executable-fSCEPonly-10-e.jdl  condor-executable-fSCEPonly-10-pi.jdl  condor-executable-fSCEPonly-10_GeV-e.sh  condor-executable-fSCEPonly-10_GeV-pi.sh  condor-executable-fSCEPonly-20_e.jdl  condor-executable-fSCEPonly-20_e.sh  condor-executable-fSCEPonly-20_pi.jdl  condor-executable-fSCEPonly-30-e.jdl  condor-executable-fSCEPonly-30-pi.jdl  condor-executable-fSCEPonly-30_GeV-e.sh  condor-executable-fSCEPonly-30_GeV-pi.sh  condor-executable-sampling-20_e.jdl  condor-executable-sampling-20_pi.jdl  submit.pbs  submit.sh
include/: DBParameters.h  DualCrysCalConverter.h  DualCrysCalDigi.h  DualCrysCalorimeterHit.h  SCEGeant4Output2ROOT.h
scripts/: README.md
src/: CalorimeterHitType.h  DRCrys_geo.cpp  DRFiber_geo.cpp  DRFtubeFiber_geo.cpp  DRSamp_geo.cpp  DRUpstream_geo.cpp  DualCrysCalorimeterDump.cpp  DualCrysCalorimeterHit.cpp  DualCrysCalorimeterHit.h  DualCrysCalorimeterSDAction.cpp  EdgeDet_geo.cpp  SCEGeant4Output2ROOT.cpp
